--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,9 @@
-# This file lists all individuals having contributed content to the repository.
+# These are lists of all individuals having contributed content to the repository.
 
+# current contributor
+Ernest T. Lartey <ernestlrty@hotmail.com>
 
-Jennifer Huang <133@holbertonschool.com>
+# previous contributors
+Jennifei Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
